--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </datalist>
                             
                             <label class="d-block mb-4">
-                                <input class="form-control js-contact-phone phone-ivalid" type="number" placeholder="Phone" aria-label="Phone" max="999999999999" required>
+                                <input class="form-control js-contact-phone" type="number" placeholder="Phone" aria-label="Phone" max="999999999999" required>
                                 <span class="invalid-text">This number already exists</span>
                             </label>
 
